tooling/nargo_cli/tests/snapshots/execution_success/array_with_refs_return/execute__tests__stdout.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stdout
---
brillig(inline) fn main f0 {
  b0():
    (no terminator instruction)
}
[array_with_refs_return] Circuit output: [2, 3]
